# webrtc-signal-server

./: .env  .gitignore  Cargo.toml  service-account.json
migrations/: 20240130074518_init.sql  20240130125209_init.sql  20240130133606_modify_field.sql  20240202142753_add_fields.sql  20240203075557_add_messages_table.sql  20240203080944_alter_migrate.sql  20240203082508_alter_fields.sql  20240206065952_add_uploads.sql  20240206073441_add_column_to_uploads.sql  20240206073613_modify_column_of_uploads.sql  20240206083359_change_column_type.sql  20240206083649_drop_default.sql  20240207031226_add_avatar_for_users.sql  20240207032947_change_users_id_type.sql  20240207034239_change_friend_requests_id_type.sql  20240211082803_add_apns_token_column_to_users.sql  20240211092522_rename_column.sql  20240213014254_modify_messages_columns.sql  20240213020550_add_column_to_messages.sql  20240217032759_add_column_to_messages.sql
src/: handlers.rs  main.rs  messages.rs  utils.rs  ws.rs
src/_handlers/: auth.rs  common.rs  message.rs
src/addr_keepers/: mod.rs
src/core/: addr_keeper.rs  error.rs  message.rs  mod.rs  notifier.rs  repository.rs  store.rs  ws.rs
src/handlers/: auth.rs  common.rs  mod.rs  ws.rs
src/middlewares/: cors.rs  mod.rs  utf8.rs
src/notifiers/: fcm.rs  mod.rs
src/stores/: addr.rs  mod.rs
src/stores/auth_repositories/postgres/: repository.rs
src/stores/friends_stores/: memory.rs  mod.rs
src/stores/friends_stores/postgres/: store.rs
src/stores/friends_stores/postgres/migrations/: 20240130080944_add_unique_constraint.sql
src/stores/postgres/: auth.rs  mod.rs  store.rs  upload.rs
src/ws/: actor.rs  handlers.rs  messages.rs  mod.rs
